# mexc_bot_ready

./: Procfile  RAILWAY_SETUP.md  README.md  bot.py  bot_config.json  bybit_pairs.json  mexc_futures_filtered_symbols.json  pump_bot_full.py  pyproject.toml  requirements.txt  weex_pairs.json
