[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "mplfinance>=0.12.10b0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "python-telegram-bot>=22.3",
    "requests>=2.32.4",
    "streamlit>=1.48.0",
    "ta>=0.11.0",
    "telethon>=1.40.0",
]
